--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
         "name": "Karenyulier",
         "email": "karenyulierr@gmail.com"
     }],
-    "require": {},
+    "require": {
+        "intervention/image": "^2.7"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "./classes"
